--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,16 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+PROJ_GROUP=com.light.permission
+PROJ_VERSION=1.0.0
+PROJ_NAME=Light Permission
+PROJ_WEBSITEURL=https\://github.com/menghuit/Permission
+PROJ_ISSUETRACKERURL=https\://github.com/menghuit/Permission/issues
+PROJ_VCSURL=git@github.com:menghuit/Permission.git
+PROJ_DESCRIPTION=Handle Android runtime permission
+PROJ_REPO=maven
+
+DEVELOPER_ID=menghuit
+DEVELOPER_NAME=ZhangDi
+DEVELOPER_EMAIL=zd854078392@gmail.com
