--- a/permission-annotations/build.gradle
+++ b/permission-annotations/build.gradle
@@ -2,7 +2,10 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compileOnly deps.android
 }
 
 sourceCompatibility = rootProject.ext.sourceCompatibilityVersion
 targetCompatibility = rootProject.ext.targetCompatibilityVersion
+
+apply from: rootProject.file('bintray.gradle')
