--- a/permission-plugin/build.gradle
+++ b/permission-plugin/build.gradle
@@ -1,11 +1,14 @@
 apply plugin: 'groovy'
-apply plugin: 'maven'
+
+sourceCompatibility = rootProject.ext.sourceCompatibilityVersion
+targetCompatibility = rootProject.ext.targetCompatibilityVersion
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    compile 'com.android.tools.build:gradle:1.3.0'
+    compile deps.aspectjrt
+    compile deps.aspectjrtTools
 }
 
-repositories {
-    mavenCentral()
-}
+apply from: rootProject.file('bintray.gradle')
