--- a/permission-runtime/build.gradle
+++ b/permission-runtime/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath deps.aspectjrtTools
+    }
+}
+
 import com.android.build.gradle.LibraryPlugin
 import org.aspectj.bridge.IMessage
 import org.aspectj.bridge.MessageHandler
@@ -74,3 +83,5 @@ android.libraryVariants.all { variant ->
         }
     }
 }
+
+apply from: rootProject.file('bintray.gradle')
